<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="net.theev.smsscheduler.SettingsActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/defaultsButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center"
            android:onClick="openDefaultsPopup"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/defaultImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_list_white_24dp" />

            <TextView
                android:id="@+id/defaultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/defaults"
                android:textAllCaps="true"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/limitLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monthlyLimitLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/monthly_limit_of_messages"
                android:textColor="#666666"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/limitEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginStart="6dp"
                android:ems="3"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="8"
                android:textColor="#666666"
                android:textSize="16sp"
                android:theme="@style/AppTheme.Base" />

            <ImageButton
                android:id="@+id/saveLimitImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle"
                android:onClick="saveLimit"
                android:padding="6dp"
                android:src="@drawable/ic_done_white_24dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalMessagesSentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/defaultsButtonLayout"
                android:layout_centerHorizontal="true"
                android:text="@string/total_messages_sent"
                android:textColor="#666666"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/shareImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/rounded_rectangle"
                android:onClick="shareStatistics"
                android:padding="6dp"
                android:src="@drawable/ic_share_white_24dp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/statisticsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topLayout"
        android:layout_marginTop="16dp"
        android:divider="#E6E6E6"
        android:dividerHeight="1dp"
        android:scrollbarSize="3dp"
        android:scrollbarThumbVertical="@drawable/rounded_rectangle" />

</RelativeLayout>
